@@ -1,3 +1,3 @@
 <a href="http://feeds.feedburner.com/raptiyeorg">
-	<img src="http://feeds.feedburner.com/~fc/raptiyeorg?bg=206e01&amp;fg=ffffff&amp;anim=0" height="26" width="88" style="vertical-align:middle;border:0" alt="" />
+	<img src="http://feeds.feedburner.com/~fc/raptiyeorg?bg=99CCFF&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" />
 </a>
