@@ -24,7 +24,7 @@
 		<div class="widget_box">
 			<div class="widget_title">
 				{% spaceless %}
-				<a href="{% url rss_feed "latest" %}" title="yeni günlük yazılarını rss üzerinden takip edebilmek için tıklayın..">
+				<a href="{{ mainpage.rss_url }}" title="yeni günlük yazılarını rss üzerinden takip edebilmek için tıklayın..">
 					<img src="/media/images/rss_feed.png" align="absmiddle" border="0">
 				</a>
 				rss takibi
