@@ -7,8 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="icon" href="/media/images/favicon.png" type="image/png"/>
 		<link rel="stylesheet" href="/media/css/style.css">
-		<link href="{% url rss_feed "latest" %}" rel="alternate" type="application/rss+xml" title="raptiye rss feed" />
-		<link href="{% url rss_feed "alatest" %}" rel="alternate" type="application/atom+xml" title="raptiye atom feed" />
+		<link href="{{ mainpage.rss_url }}" rel="alternate" type="application/rss+xml" title="raptiye rss feed" />
 		<script type="text/javascript" src="/media/js/jquery.js"></script>
 		<script type="text/javascript" src="/media/js/raptiye.js"></script>
 		<title>{% block title %}{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}</title>
